Fix spacing, added figcaption inside figure,

--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ body {
 
 p {
   max-width: 15em;
-  background-color: rgba(1,1,1,.3)
+  background-color: rgba(1, 1, 1, .3);
 }
 
 .unit {
@@ -40,7 +40,10 @@ p {
   position: absolute;
   left: 1em;
   bottom: 1em;
-  border-radius: .5em;
+  border-radius: .5rem;
   padding: 1rem;
+}
 
+figure {
+  margin: 0;
 }
